Fixed launch classpath