@@ -13,7 +13,7 @@ dependencies {
   testImplementation "com.obsidiandynamics.fulcrum:fulcrum-launcher:${fulcrumVersion}"
 }
 
-task launch(dependsOn: testClasses) {
+task launch(dependsOn: [classes, testClasses]) {
   doLast {
     def launcherClasses = new ArrayList()
     launcherClasses += "com.obsidiandynamics.meteor.PubSubOneWayTest"
@@ -21,11 +21,15 @@ task launch(dependsOn: testClasses) {
     
     def perfJvmArgs = "-XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark " + 
                       "-XX:+UseBiasedLocking -Xms2G -Xmx2G -Xss1M -XX:+UseG1GC -XX:MaxGCPauseMillis=200 " + 
-                      "-XX:InitiatingHeapOccupancyPercent=0 -Djava.net.preferIPv4Stack=true " + 
+                      "-XX:InitiatingHeapOccupancyPercent=0 -Djava.net.preferIPv4Stack=true " +
+                      "--add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED " +
+                      "--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED " +
+                      "--add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED " +
+                      "--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED " +
                       "-Dlauncher.package.compress.level=3"
     javaexec {
       systemProperties = System.properties
-      classpath = sourceSets.test.runtimeClasspath
+      classpath = sourceSets.main.compileClasspath + sourceSets.main.runtimeClasspath + sourceSets.test.compileClasspath + sourceSets.test.runtimeClasspath
       main = "com.obsidiandynamics.launcher.Launcher"
       args = launcherClasses
       jvmArgs = Arrays.asList(perfJvmArgs.split(" ")) + baseJvmArgs
